<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_app_link">https://practicum.yandex.ru/android-developer</string>
    <string name="contact_support_email">annevoloshko@yandex.ru</string>
    <string name="contact_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="contact_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="connection_issues">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="new_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_dialog_neutral_button">Отмена</string>
    <string name="new_playlist_dialog_positive_button">Завершить</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
</resources>