<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingStart="16dp"
    android:paddingEnd="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:drawableStart="@drawable/ic_arrow_back"
        android:drawablePadding="24dp"/>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="21dp"
        android:gravity="left"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:checked="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="21dp"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableEnd="@drawable/ic_share" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="21dp"
        android:text="@string/contact_support"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableEnd="@drawable/ic_support" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="21dp"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:drawableEnd="@drawable/ic_arrow_forward" />
</LinearLayout>