<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/SearchActivityStyle">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search"
        app:navigationIcon="@drawable/ic_arrow_back"
        style="@style/ToolbarStyle"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_field_layout_height"
        android:layout_marginHorizontal="@dimen/various_elements_layout_marginHorizontal"
        android:layout_marginVertical="@dimen/search_field_layout_marginVertical">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingStart="@dimen/search_EditText_paddingStart"
            android:background="@drawable/background_search_bar"
            android:inputType="text"
            android:hint="@string/search"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_search_small"
            android:drawablePadding="8dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            style="@style/SearchEditTextStyle"/>

        <ImageView
            android:id="@+id/search_icon_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:paddingEnd="@dimen/search_ImageView_paddingEnd"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            style="@style/SearchIconClearStyle"/>
    </FrameLayout>

    <ProgressBar
        android:id="@+id/search_progressbar"
        android:layout_width="@dimen/search_progressbar_layout_width_and_layout_height"
        android:layout_height="@dimen/search_progressbar_layout_width_and_layout_height"
        android:layout_marginTop="@dimen/search_progressbar_layout_marginTop"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recyclerview_found_tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_RecyclerView_layout_marginTop"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <LinearLayout
            android:id="@+id/search_no_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/search_placeholder_ImageView_paddingTop"
                android:paddingBottom="@dimen/search_placeholder_ImageView_paddingBottom"
                android:src="@drawable/placeholder_no_results"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/search_placeholder_TextView_paddingHorizontal"
                android:gravity="center"
                android:text="@string/no_results"
                style="@style/PlaceholderTextViewStyle"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_connection_issues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/search_placeholder_ImageView_paddingTop"
                android:paddingBottom="@dimen/search_placeholder_ImageView_paddingBottom"
                android:src="@drawable/placeholder_connection_issues"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/search_placeholder_TextView_paddingHorizontal"
                android:gravity="center"
                android:text="@string/connection_issues"
                style="@style/PlaceholderTextViewStyle"/>

            <Button
                android:id="@+id/search_button_reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_placeholder_Button_layout_marginTop"
                android:layout_gravity="center"
                android:text="@string/reload"
                style="@style/SearchReloadClearHistoryAndNewPlaylistButtonsStyle"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_history_TextView_layout_marginTop"
                android:paddingTop="@dimen/search_history_TextView_paddingTop"
                android:paddingBottom="@dimen/search_history_TextView_paddingBottom"
                android:gravity="center"
                android:text="@string/you_searched"
                style="@style/SearchHistoryTextViewStyle"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_recyclerview_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_history_RecyclerView_layout_marginTop"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <Button
                android:id="@+id/search_button_clear_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_history_Button_layout_marginTop"
                android:layout_gravity="center"
                android:text="@string/clear_history"
                style="@style/SearchReloadClearHistoryAndNewPlaylistButtonsStyle"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>