<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".library.ui.NewPlaylistFragment"
    style="@style/NewPlaylistFragmentStyle">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/new_playlist_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/new_playlist"
        style="@style/ToolbarStyle"/>

    <FrameLayout
        android:id="@+id/new_playlist_art_container"
        android:layout_width="@dimen/new_playlist_art_container_layout_width_and_height"
        android:layout_height="@dimen/new_playlist_art_container_layout_width_and_height"
        android:layout_marginHorizontal="@dimen/new_playlist_art_container_layout_marginHorizontal"
        android:layout_marginTop="@dimen/new_playlist_art_container_layout_marginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_toolbar"
        android:background="@drawable/background_playlist_art">

        <ImageView
            android:id="@+id/new_playlist_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/new_playlist_art_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_photo"/>
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_playlist_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/new_playlist_TextInputLayout_marginHorizontal"
        android:layout_marginTop="@dimen/new_playlist_name_TextInputLayout_marginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_art_container"
        android:hint="@string/playlist_name"
        style="@style/NewPlaylistTextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_playlist_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/new_playlist_TextInputEditText_paddingHorizontal"
            android:paddingVertical="@dimen/new_playlist_TextInputEditText_paddingVertical"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:background="@null"
            style="@style/NewPlaylistTextInputEditTextStyle"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_playlist_description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/new_playlist_TextInputLayout_marginHorizontal"
        android:layout_marginTop="@dimen/new_playlist_description_TextInputLayout_layout_marginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_name_layout"
        android:hint="@string/playlist_description"
        style="@style/NewPlaylistTextInputLayoutStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_playlist_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/new_playlist_TextInputEditText_paddingHorizontal"
            android:paddingVertical="@dimen/new_playlist_TextInputEditText_paddingVertical"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:background="@null"
            style="@style/NewPlaylistTextInputEditTextStyle"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/new_playlist_button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/new_playlist_button_create_layout_marginHorizontal"
        android:layout_marginBottom="@dimen/new_playlist_button_create_layout_marginBottom"
        android:paddingVertical="@dimen/new_playlist_button_create_paddingVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create"
        android:background="@drawable/selector_background_button_create_new_playlist"
        android:enabled="false"
        style="@style/NewPlaylistCreateButtonStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>